[build-system]
requires = ["py-build-cmake>=0.4.3"]
build-backend = "py_build_cmake.build"


[project]
name = "cereggii"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "dpdani", email = "git@danieleparmeggiani.me" },
]
keywords = [
  "multithreading",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Free Threading :: 4 - Resilient",
  "Operating System :: OS Independent",
  "Natural Language :: English",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build==1.2.2.post1",
  "pytest==8.3.3",
  "pytest-reraise==2.1.2",
  "black==24.10.0",
  "ruff==0.7.0",
]

docs = [
  "mkdocs-material==9.6.11",
  "mike==2.1.3",
  "mkdocs-redirects==1.2.2",
  "mkdocstrings-python==1.16.10",
  "mkdocs-exclude==1.0.2",
]


[project.urls]
Documentation = "https://dpdani.github.io/cereggii/"
Issues = "https://github.com/dpdani/cereggii/issues"
Source = "https://github.com/dpdani/cereggii"

[tool.py-build-cmake.module]
directory = "src"

[tool.py-build-cmake.sdist]
include = [
  "CMakeLists.txt",
  "src/CMakeLists.txt",
  "src/cereggiiconfig.h.in",
  "src/include/*",
]

[tool.py-build-cmake.cmake]
minimum_version = "3.18"
build_type = "RelWithDebInfo"
source_path = "src"
args = ["-L"]
build_args = ["-j"]
install_components = ["python_modules"]


[tool.cibuildwheel]
before-all = "cat /proc/cpuinfo || (sysctl -a)"
enable = [
  "cpython-freethreading",
]
skip = "*i686"
before-test = "pip install pytest==8.3.3 pytest-reraise==2.1.2"
test-command = "pytest {project}"


[tool.black]
target-version = ["py313"]
line-length = 120
skip-string-normalization = true
# remove this after line-length is reset to the default of 88
extend_exclude = "(examples/atomic_dict/reduce_sum.py|examples/atomic_dict/reduce_avg.py)"

[tool.ruff]
target-version = "py313"
line-length = 120

[lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # `print` found
  "T201",
  # Import block is un-sorted or un-formatted
  "I001",
  # Unnecessary `list` / `tuple` / `dict` call (rewrite as a literal)
  "C408",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]
known-first-party = ["cereggii"]

[lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]


[tool.coverage.run]
source_pkgs = ["src/cereggii", "tests"]
branch = true
parallel = true
omit = [
  "src/cereggii/__about__.py",
]

[tool.coverage.paths]
cereggii = ["src/cereggi"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
